syntax = "proto3";

package chip.rpc.bridge;

message Empty {}

message RemoveDevice {
  uint32 id = 1;
}

message Cluster {
  uint32 cluster_id = 1;
}

message DeviceType {
  uint32 id = 1;
  uint32 version = 2;
}

message AddDevice {
  repeated Cluster clusters = 1;
  repeated DeviceType device_types = 2;
  uint32 parent_endpoint = 3;
}

message AddDeviceResponse {
  uint32 id = 1;
}

service Bridge {
  rpc Add(AddDevice) returns (AddDeviceResponse){};
  rpc Remove(RemoveDevice) returns (Empty){};
}
